# CG-Path_Tracing-Algorithm

./: .gitignore  CMakeLists.txt  README.md
source/accelerators/: BVH.cpp  BVH.h
source/core/: Camera.cpp  Camera.h  Film.cpp  Film.h  Filter.cpp  Filter.h  Geometry.cpp  Geometry.h  Integrator.cpp  Integrator.h  Interaction.cpp  Interaction.h  Material.cpp  Material.h  ObjLoader.cpp  ObjLoader.h  PDF.cpp  PDF.h  Parser.cpp  Parser.h  Ray.cpp  Ray.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  core.h  core_std.h
source/ext/: ext.h  stb_image.cpp  stb_image_write.cpp  tiny_obj_loader.h
source/integrators/: DirectIntegrator.cpp  DirectIntegrator.h  MisIntegrator.cpp  MisIntegrator.h  MixIntegrator.cpp  MixIntegrator.h  integrators.h
source/main/: core.cpp
source/materials/: BRDF.cpp  BRDF.h  Dielectric.cpp  Dielectric.h  DiffuseLight.cpp  DiffuseLight.h  Isotropic.cpp  Isotropic.h  Lambertian.cpp  Lambertian.h  Mapping.cpp  Mapping.h  Metal.cpp  Metal.h  MicrofacetBRDF.cpp  MicrofacetBRDF.h  MicrofacetBSDF.cpp  MicrofacetBSDF.h  materials.h
source/samplers/: UniformSampler.cpp  UniformSampler.h
source/shapes/: Box.cpp  Box.h  HomogeneousMedium.cpp  HomogeneousMedium.h  Mesh.cpp  Mesh.h  MovingSphere.cpp  MovingSphere.h  Rectangle.cpp  Rectangle.h  ShapeList.cpp  ShapeList.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  shapes.h
source/textures/: CheckerboardTexture.cpp  CheckerboardTexture.h  ConstantTexture.cpp  ConstantTexture.h  ImageTexture.cpp  ImageTexture.h  NoiseTexture.cpp  NoiseTexture.h  textures.h
